@@ -1,6 +1,8 @@
 2012-01-24  Julien Danjou  <julien@danjou.info>
 
 	* color.el (color-rgb-to-hsl): Fix value computing.
+	(color-hue-to-rgb): New function.
+	(color-hsl-to-rgb): New function.
 
 2012-01-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
